--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rock Papers Scissors game using javascript es6",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,8 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "eslint": "^3.18.0",
+    "node-libs-browser": "^2.0.0",
+    "strip-loader": "^0.1.2",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
