--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "rockpaperscissors",
   "version": "1.0.0",
-  "description": "Rock Papers Scissors game using javascript es6",
+  "description": "Rock Papers Scissors game using es6, webpack, scss",
   "main": "app.js",
-  "scripts": {
-    "start": "webpack-dev-server"
+ "scripts": {
+    "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --port 3001 --hot --inline",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,14 +19,30 @@
   },
   "homepage": "https://github.com/veereshmeesala/rockpaperscissors#readme",
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "eslint": "^3.18.0",
-    "node-libs-browser": "^2.0.0",
-    "strip-loader": "^0.1.2",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.2"
+      "autoprefixer": "^6.0.3",
+      "babel-core": "^5.8.25",
+      "babel-loader": "^5.3.2",
+      "css-loader": "^0.21.0",
+      "es6-promise": "^3.0.2",
+      "node-sass": "^3.3.3",
+      "postcss-loader": "^0.7.0",
+      "sass-loader": "^3.0.0",
+      "style-loader": "^0.13.0",
+      "stylelint-selector-bem-pattern": "^1.0.0",
+      "stylelint-webpack-plugin": "^0.2.0",
+      "webpack": "^1.12.2",
+      "webpack-dev-server": "^1.12.1"
+    },
+  "keywords": [
+    "babel",
+    "boilerplate",
+    "es6",
+    "sass",
+    "starter-kit",
+    "workflow",
+    "webpack"
+  ],
+  "dependencies": {
+    "extract-text-webpack-plugin": "^1.0.1"
   }
 }
