--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Rock Papers Scissors game using es6, webpack, scss",
   "main": "app.js",
- "scripts": {
+  "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --port 3001 --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=testing karma start --single-run",
     "bundle": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "repository": {
@@ -19,20 +19,38 @@
   },
   "homepage": "https://github.com/veereshmeesala/rockpaperscissors#readme",
   "devDependencies": {
-      "autoprefixer": "^6.0.3",
-      "babel-core": "^5.8.25",
-      "babel-loader": "^5.3.2",
-      "css-loader": "^0.21.0",
-      "es6-promise": "^3.0.2",
-      "node-sass": "^3.3.3",
-      "postcss-loader": "^0.7.0",
-      "sass-loader": "^3.0.0",
-      "style-loader": "^0.13.0",
-      "stylelint-selector-bem-pattern": "^1.0.0",
-      "stylelint-webpack-plugin": "^0.2.0",
-      "webpack": "^1.12.2",
-      "webpack-dev-server": "^1.12.1"
-    },
+    "autoprefixer": "^6.0.3",
+    "babel-core": "^5.8.25",
+    "babel-loader": "^5.3.2",
+    "chai": "^3.5.0",
+    "css-loader": "^0.21.0",
+    "es6-promise": "^3.0.2",
+    "eslint": "^3.18.0",
+    "eslint-loader": "^1.7.0",
+    "karma": "^1.5.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-plugins": "^0.8.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sinon": "^1.0.5",
+    "karma-sinon-chai": "^1.2.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "mocha": "^3.2.0",
+    "node-sass": "^3.3.3",
+    "postcss-loader": "^0.7.0",
+    "sass-loader": "^3.0.0",
+    "sinon": "^2.1.0",
+    "style-loader": "^0.13.0",
+    "stylelint-selector-bem-pattern": "^1.0.0",
+    "stylelint-webpack-plugin": "^0.2.0",
+    "watch": "^1.0.2",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
+  },
   "keywords": [
     "babel",
     "boilerplate",
